# spam-detection-system

./: Dockerfile  README.md  main.py  pyproject.toml
models/: vectorizer.pkl
notebooks/: train.py
src/: main.py
